--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@radix-ui/react-scroll-area": "^1.2.3",
     "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-toggle": "^1.1.2",
     "@reduxjs/toolkit": "^2.5.1",
     "@stdlib/nlp-expand-contractions": "^0.2.2",
     "class-variance-authority": "^0.7.1",
@@ -29,6 +30,7 @@
     "@eslint/eslintrc": "^3",
     "@next/eslint-plugin-next": "^15.1.7",
     "@types/diff": "^7.0.1",
+    "@types/dom-speech-recognition": "^0.0.4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
