--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "diff": "^7.0.0",
     "lucide-react": "^0.475.0",
     "next": "15.1.7",
+    "openai": "^4.85.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
