--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "openai": "^4.85.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hotkeys-hook": "^4.6.1",
     "react-redux": "^9.2.0",
     "redux-persist": "^6.0.0",
     "tailwind-merge": "^3.0.1",
